@@ -70,7 +70,6 @@ ReadDecision = 'PloneMeeting: Read decision'
 WriteDecision = 'PloneMeeting: Write decision'
 ReadObservations = 'PloneMeeting: Read item observations'
 WriteItemMeetingManagerFields = 'PloneMeeting: Write item MeetingManager reserved fields'
-ReadDecisionAnnex = 'PloneMeeting: Read decision annex'
 ReadBudgetInfos = 'PloneMeeting: Read budget infos'
 WriteBudgetInfos = 'PloneMeeting: Write budget infos'
 WriteHarmlessConfig = 'PloneMeeting: Write harmless config'
